<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.krayushka.ahtung.MainActiveActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings" android:icon="@drawable/ic_action_settings"/>
    
    <item android:id="@+id/mute" android:title="@string/mute" android:checkable="true" android:orderInCategory="1" android:icon="@drawable/ic_action_volume_muted" android:showAsAction="ifRoom"></item>
    <item android:id="@+id/leave" android:title="@string/leave_group"  android:orderInCategory="3" android:icon="@drawable/ic_action_back" android:showAsAction="ifRoom"></item>
    <item android:id="@+id/share" android:title="@string/share"  android:orderInCategory="3"  android:icon="@drawable/ic_action_share" android:showAsAction="ifRoom"></item>
    
    

</menu>
